faq accordion - final

--- a/faq-accordion/style.css
+++ b/faq-accordion/style.css
@@ -57,6 +57,7 @@ main {
   max-width: 60rem;
   padding: var(--space-lg);
   border-radius: var(--space-xxs);
+  box-shadow: 0 0 3rem 3rem rgba(0, 0, 0, 0.1);
   background: var(--color-white);
   display: grid;
   gap: var(--space-lg);
