--- a/contact-form/style.css
+++ b/contact-form/style.css
@@ -183,6 +183,38 @@ legend {
   gap: var(--space-sm);
 }
 
+.checkbox input[type="checkbox"] {
+  appearance: none;
+  width: 1.8rem;
+  height: 1.8rem;
+  border: 0.18rem solid var(--color-grey);
+  border-radius: 0.15em;
+  transform: translateY(0.36rem);
+  display: grid;
+  place-content: center;
+}
+
+.checkbox input[type="checkbox"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  background: var(--color-green);
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em var(--color-white);
+  transform-origin: bottom left;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+
+.checkbox input[type="checkbox"]:checked {
+  border: 0.18rem solid var(--color-green);
+  background: var(--color-green);
+}
+
+.checkbox input[type="checkbox"]:checked::before {
+  transform: scale(1);
+}
+
 .btn {
   cursor: pointer;
   border: none;
