--- a/news-homepage/style.css
+++ b/news-homepage/style.css
@@ -23,12 +23,143 @@
   padding: 0;
 }
 
+ul {
+  list-style: none;
+}
+
 html {
   font-family: inter, sans-serif;
   font-size: 62.5%;
-  line-height: 1.5;
   letter-spacing: 0rem;
+  color: var(--color-grey-d);
 }
 
 body {
+  font-size: 1.5rem;
+}
+
+.container {
+  margin: 2.8rem 1.6rem;
+  display: grid;
+  gap: 3.2rem;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.img-logo {
+  max-height: 2.8rem;
+}
+
+.img-menu--open {
+  max-height: 1.7rem;
+}
+
+.navigation {
+  display: none;
+}
+
+.main-content {
+  display: grid;
+  gap: 6.4rem;
+}
+
+.home__img {
+  margin-bottom: 2.4rem;
+  max-width: 100%;
+}
+
+.home__title {
+  margin-bottom: 1.6rem;
+  font-size: 4rem;
+  font-weight: 800;
+  line-height: 1;
+}
+
+.home__text {
+  margin-bottom: 2.4rem;
+  line-height: 2.6rem;
+  color: var(--color-grey);
+}
+
+.home__btn {
+  border: none;
+  background: var(--color-red);
+  padding: 1.6rem 3.2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.3em;
+  font-size: 1.4rem;
+  font-weight: 700;
+  font-family: inherit;
+  color: inherit;
+}
+
+.article--new {
+  background: var(--color-grey-d);
+  padding: 2.4rem;
+}
+
+.new__title {
+  margin-bottom: 3.5rem;
+  font-size: 3.2rem;
+  font-weight: 700;
+  line-height: 1;
+  color: var(--color-yellow);
+}
+
+.new__list__item h3 {
+  margin-bottom: 0.8rem;
+  font-size: 2rem;
+  line-height: 2.4rem;
+  color: var(--color-grey-vl);
+}
+
+.new__list__item p {
+  line-height: 2.6rem;
+  color: var(--color-grey-l);
+}
+
+.line {
+  border-bottom: 0.1rem solid var(--color-grey);
+  margin: 3.2rem 0;
+}
+
+.trending__list {
+  display: grid;
+  gap: 3.2rem;
+}
+
+.trending__list__item {
+  display: flex;
+  gap: 2.4rem;
+}
+
+.trending__list__item__img {
+  max-width: 10rem;
+  grid-row: 1 / -1;
+}
+
+.trending__list__item__detail__number {
+  margin-bottom: 1.2rem;
+  font-size: 3.2rem;
+  font-weight: 700;
+  line-height: 3.2rem;
+  color: var(--color-red);
+}
+
+.trending__list__item__detail__title {
+  margin-bottom: 0.9rem;
+  font-size: 1.8rem;
+  font-weight: 800;
+  line-height: 2.4rem;
+}
+
+.trending__list__item__detail__description {
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 2.6rem;
+  color: var(--color-grey);
 }
