--- a/news-homepage/style.css
+++ b/news-homepage/style.css
@@ -1,6 +1,7 @@
 :root {
   --color-yellow: hsl(35, 77%, 62%);
   --color-red: hsl(5, 85%, 63%);
+  --color-white: hsl(0, 100%, 100%);
   --color-grey-vl: hsl(36, 100%, 99%);
   --color-grey-l: hsl(233, 8%, 79%);
   --color-grey: hsl(236, 13%, 42%);
@@ -32,10 +33,13 @@ html {
   font-size: 62.5%;
   letter-spacing: 0rem;
   color: var(--color-grey-d);
+  overflow-x: hidden;
 }
 
 body {
   font-size: 1.5rem;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .container {
@@ -54,12 +58,50 @@ body {
   max-height: 2.8rem;
 }
 
-.img-menu--open {
+.nav-open {
   max-height: 1.7rem;
 }
 
-.navigation {
-  display: none;
+.nav-close {
+  width: 2.8rem;
+  height: 2.8rem;
+  margin-bottom: 9rem;
+  align-self: flex-end;
+}
+
+.nav {
+  transform: translateX(100%);
+  position: absolute;
+  width: 25.6rem;
+  height: 100%;
+  padding: 2.8rem 2.4rem;
+  background: var(--color-white);
+  top: 0;
+  right: 0;
+  transition: transform 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+}
+
+.open {
+  transform: translateX(0);
+  box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.7);
+}
+
+.nav__list {
+  display: grid;
+  gap: 2.4rem;
+}
+
+.nav__list__item a:link,
+.nav__list__item a:visited,
+.nav__list__item a:focus,
+.nav__list__item a:hover,
+.nav__list__item a:active {
+  text-decoration: none;
+  font-size: 1.8rem;
+  line-height: 2.4rem;
+  color: var(--color-grey-d);
 }
 
 .main-content {
