--- a/news-homepage/style.css
+++ b/news-homepage/style.css
@@ -59,6 +59,12 @@ body {
   max-height: 2.8rem;
 }
 
+.nav-btn {
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
 .nav-open {
   max-height: 1.7rem;
 }
@@ -79,12 +85,12 @@ body {
   background: var(--color-white);
   top: 0;
   right: 0;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.5s ease-in-out;
   display: flex;
   flex-direction: column;
 }
 
-.open {
+.nav-open[aria-expanded="true"] + .nav {
   transform: translateX(0);
   box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.7);
 }
@@ -97,6 +103,7 @@ body {
 .nav__list__item a:link,
 .nav__list__item a:visited,
 .nav__list__item a:focus {
+  cursor: pointer;
   text-decoration: none;
   font-size: 1.8rem;
   line-height: 2.4rem;
@@ -270,7 +277,7 @@ body {
     all: unset;
   }
 
-  .open {
+  .nav-open[aria-expanded="true"] + .nav {
     transform: unset;
     box-shadow: none;
   }
@@ -278,6 +285,19 @@ body {
   .nav__list {
     display: flex;
     gap: 4rem;
+  }
+
+  .nav__list__item a:link,
+  .nav__list__item a:visited,
+  .nav__list__item a:focus {
+    font-size: 1.5rem;
+    line-height: 2.6rem;
+    color: var(--color-grey);
+  }
+
+  .nav__list__item a:hover,
+  .nav__list__item a:active {
+    color: var(--color-red);
   }
 
   .article--home {
